--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
+body {
+}
+.app {
+  justify-content: center;
+  display: grid;
+  grid-template-rows: 3rem 1fr;
+  grid-template-columns: 1fr 5fr;
+  gap: 5px;
+}
+.header {
+  text-align: center;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+}
+.playfield {
+  display: grid;
+  justify-content: space-around;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 5px;
+  width: 100%;
+  grid-column-start: 2;
+  grid-row-start: 2;
+  max-width: fit-content;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  border: 1px solid black;
+}
+.card {
+  height: calc((100vh - 3rem) / 4 - 10px);
+  object-fit: cover; /*Ensure images cover the grid cell without stretching */
+}
+.score {
+  grid-row-start: 2;
+  grid-column-start: 1;
+  align-self: center;
+  justify-self: center;
+  max-width: 12rem;
+  border: 1px solid black;
+  overflow-wrap: break-word;
+  display: inline-block;
+  text-align: center;
+  font-size: 20px;
+}
+.pairs {
+  font-size: 100px;
+}
+.blank {
+  width: calc((50vw - 3rem) / 4 - 10px);
+  height: calc((100vh - 3rem) / 4 - 10px);
+  border: 1px solid blue;
+  background-color: violet;
+  opacity: 50%;
 }
