--- a/src/index.css
+++ b/src/index.css
@@ -18,20 +18,18 @@ body {
 }
 .playfield {
   display: grid;
-  justify-content: space-around;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  gap: 5px;
-  width: 100%;
-  grid-column-start: 2;
-  grid-row-start: 2;
-  max-width: fit-content;
-
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Adjust minmax as needed */
+  gap: 10px; /* Adjust gap between images */
+  height: 100%; /* Adjust this height as necessary */
+  overflow: hidden; /* Prevents scrolling */
+  gap: 0.3 vw;
   border: 1px solid black;
+  margin-right: 0.1vw;
 }
-.card {
-  height: calc((100vh - 3rem) / 4 - 10px);
-  object-fit: cover; /*Ensure images cover the grid cell without stretching */
+.playfield img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures images cover their space */
 }
 .score {
   grid-row-start: 2;
@@ -48,10 +46,7 @@ body {
 .pairs {
   font-size: 100px;
 }
-.blank {
-  width: calc((50vw - 3rem) / 4 - 10px);
-  height: calc((100vh - 3rem) / 4 - 10px);
-  border: 1px solid blue;
-  background-color: violet;
-  opacity: 50%;
+.hover-mod:hover {
+  webkit-filter: blur(4px);
+  filter: blur(4px);
 }
