--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   margin: 0;
 }
 body {
+  background-image: url("tabletop.jpg");
 }
 .app {
   justify-content: center;
@@ -16,6 +17,9 @@ body {
   grid-column-end: 3;
   grid-row-start: 1;
 }
+.title {
+  font-style: oblique;
+}
 .playfield {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Adjust minmax as needed */
@@ -23,7 +27,6 @@ body {
   height: 100%; /* Adjust this height as necessary */
   overflow: hidden; /* Prevents scrolling */
   gap: 0.3 vw;
-  border: 1px solid black;
   margin-right: 0.1vw;
 }
 .playfield img {
@@ -37,7 +40,7 @@ body {
   align-self: center;
   justify-self: center;
   max-width: 12rem;
-  border: 1px solid black;
+  border: 5px inset peru;
   overflow-wrap: break-word;
   display: inline-block;
   text-align: center;
@@ -47,6 +50,8 @@ body {
   font-size: 100px;
 }
 .hover-mod:hover {
-  webkit-filter: blur(2px);
-  filter: blur(2px);
+  filter: brightness(115%);
+}
+.card {
+  border: 2px outset #787878;
 }
